[package]
name = "src"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
log = "0.4.0"
env_logger = "0.9.0"

[dev-dependencies]
assert_cmd = "2.0.11"
predicates = "3.0.3"
